--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <title>GitHub Page Demo</title>
 </head>
 <body>
-  <p>Hey nerd.</p>
+  <p>Hey nerd.<br>
+    You're a rock star<br>
+    Get your game on<br>
+    Go play<br>
+    Hey nerd<br>
+    You're a rock star<br>
+    Get the show on<br>
+    Get paid<br>
+    And all that glitters is gold<br>
+    Only shooting stars break the mold<br>
+    It's a cool place<br>
+    And they say it gets colder<br>
+    You're bundled up now<br>
+      
+
+  </p>
 </body>
 </html>
